2008-01-30  Vivek Sekar  <viveksekar@gmail.com>
        * Cleaned up the debian/control.maemo-chinook and
	debian/control.maemo-diablo files.

2008-01-30  Philip Van Hoof <pvanhoof@gnome.org>

	* Implemented DotNet bindings

2008-01-29  Sergio Villar Senin  <svillar@igalia.com>
	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-folder.c
	libtinymail-camel/camel-lite/camel/camel-store-summary.c:
	Added the proper error codes when there is no enough space left on
	devices	

2008-01-29  Philip Van Hoof <pvanhoof@gnome.org>

	* Fixed reference counting for all TnyIterator implementations

2008-01-28  Philip Van Hoof <pvanhoof@gnome.org>

	* Removed the _func from all the interfaces and virtual function
	pointers in the classes. This should not be an ABI but is an API
	change.

	* This was a major API change

2008-01-28  Philip Van Hoof <pvanhoof@gnome.org>

	* Added skeleton for unfinished DotNet bindings. This wont work yet,
	it seems gapi2 is generating a few *Implementor types incorrectly.

2008-01-27  Philip Van Hoof <pvanhoof@gnome.org>

	* Various code improvements 
	* Merged camel-lite with upstream camel revision 8428

2008-01-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Experimental expunge handling. Less expunging from the local
	summary will be needed, as we'll more carefully calculate which of the
	sequence vs. uids got removed. Please keep an eye on this one and
	revert in needed. This commit should reduce the "Expunged" labels that
	you might have been seeing in tny E-mail clients too.

2008-01-26  Philip Van Hoof <pvanhoof@gnome.org>

	* Workaround for a known problem that ain't easy to solve right now:
	expunged headers stay around for too long. When this is detected, a
	dummy header is returned (with as flags TNY_HEADER_FLAG_EXPUNGED)
	* Finished Sergio's API change

	* This was a major API change

2008-01-25  Philip Van Hoof <pvanhoof@gnome.org>

	* Some IMAP servers don't instantly update sessions that where not in